Modify feature 1, add team contribution

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,7 @@
 Python version: 3.8.5
 
 Team member contribution:
+- Tuan Linh: Write code for "Rates", "Placing order" features, compile the work of all members and make several changes for improvement
+- Hoang Minh: Write a part of book list, code for "Search_name", "Search_id", "Filtering", "Vouchers"  features
+- Thai Hoang: Write a part of book list, code for "Sorting" feature
+- Khue: Write code for "List_all_items", "Item_info", "Customer_info" features
